--- a/configure.ac
+++ b/configure.ac
@@ -711,11 +711,11 @@ AC_DEFINE_UNQUOTED(QUANTUM_DEPTH,$QUANTUM_DEPTH,[Number of bits in a pixel Quant
 AC_SUBST(QUANTUM_DEPTH)dnl
 
 # define a lib suffix for abi purpose
-MAGICK_ABI_SUFFIX="Q${QUANTUM_DEPTH}"
+ABI_SUFFIX="Q${QUANTUM_DEPTH}"
 if test "$enable_hdri" = 'yes'; then
-  MAGICK_ABI_SUFFIX="${QUANTUM_DEPTH}-${MAGICK_HDRI}"
+  ABI_SUFFIX="Q${QUANTUM_DEPTH}-${MAGICK_HDRI}"
 fi
-AC_SUBST(MAGICK_ABI_SUFFIX)
+AC_SUBST(ABI_SUFFIX)
 
 # Set pixel cache threshold
 AC_ARG_WITH([cache],
@@ -3005,9 +3005,10 @@ AC_DEFINE_UNQUOTED(MODULES_BASEDIRNAME,"$MODULES_BASEDIRNAME",Module directory n
 AC_SUBST(MODULES_BASEDIRNAME)
 
 if test "x$MODULES_DIRNAME" = "x"; then
-   MODULES_DIRNAME=${MODULES_BASEDIRNAME}-${MAGICK_ABI_SUFFIX}
+   MODULES_DIRNAME=${MODULES_BASEDIRNAME}-${ABI_SUFFIX}
+else
+  AC_DEFINE_UNQUOTED(MODULES_DIRNAME,"$MODULES_DIRNAME",Module directory dirname)
 fi
-AC_DEFINE_UNQUOTED(MODULES_DIRNAME,"$MODULES_DIRNAME",Module directory dirname)
 AC_SUBST(MODULES_DIRNAME)
 
 MODULES_RELATIVE_PATH="${MODULES_DIRNAME}"
@@ -3025,7 +3026,6 @@ AC_SUBST(CODER_DIRNAME)
 
 CODER_RELATIVE_PATH="${CODER_DIRNAME}"
 CODER_PATH="${MODULES_PATH}/${CODER_DIRNAME}"
-AC_DEFINE_UNQUOTED(CODER_PATH,"$CODER_PATH",Location of coder modules)
 AC_SUBST(CODER_PATH)
 
 #
@@ -3040,7 +3040,6 @@ AC_SUBST(FILTER_DIRNAME)
 
 FILTER_RELATIVE_PATH="${FILTER_DIRNAME}"
 FILTER_PATH="${MODULES_PATH}/${FILTER_DIRNAME}"
-AC_DEFINE_UNQUOTED(FILTER_PATH,"$FILTER_PATH",Location of filter modules)
 AC_SUBST(FILTER_PATH)
 
 #
