--- a/config/config.h.in
+++ b/config/config.h.in
@@ -21,11 +21,8 @@
 /* Define to 1 if the `closedir' function returns void instead of `int'. */
 #undef CLOSEDIR_VOID
 
-/* "coders subdirectory". */
+/* coders subdirectory. */
 #undef CODER_DIRNAME
-
-/* Location of coder modules */
-#undef CODER_PATH
 
 /* Directory where architecture-dependent configuration files live. */
 #undef CONFIGURE_PATH
@@ -52,11 +49,8 @@
 /* Define if you have FFTW library */
 #undef FFTW_DELEGATE
 
-/* "filter subdirectory". */
+/* filter subdirectory. */
 #undef FILTER_DIRNAME
-
-/* Location of filter modules */
-#undef FILTER_PATH
 
 /* Define if you have FONTCONFIG library */
 #undef FONTCONFIG_DELEGATE
@@ -832,7 +826,7 @@
 /* Define to the type of arg 5 for `select'. */
 #undef SELECT_TYPE_ARG5
 
-/* Directory where architecture-independent configuration files live. */
+/* Directory where architecture-independent configuration files live. */]]
 #undef SHAREARCH_PATH
 
 /* Subdirectory of lib where architecture-independent configuration files
