--- a/ImageMagick.spec.in
+++ b/ImageMagick.spec.in
@@ -264,10 +264,10 @@ rm -rf %{buildroot}
 %{_bindir}/Wand-config
 %{_libdir}/libMagickCore*so*
 %{_libdir}/libMagickWand*so*
-%{_libdir}/pkgconfig/MagickCore.pc
-%{_libdir}/pkgconfig/ImageMagick.pc
-%{_libdir}/pkgconfig/MagickWand.pc
-%{_libdir}/pkgconfig/Wand.pc
+%{_libdir}/pkgconfig/MagickCore*.pc
+%{_libdir}/pkgconfig/ImageMagick*.pc
+%{_libdir}/pkgconfig/MagickWand*.pc
+%{_libdir}/pkgconfig/Wand*.pc
 %dir %{_includedir}/%{name}
 %{_includedir}/%{name}/magick
 %{_includedir}/%{name}/wand
@@ -298,8 +298,8 @@ rm -rf %{buildroot}
 %{_includedir}/%{name}/Magick++
 %{_includedir}/%{name}/Magick++.h
 %{_libdir}/libMagick++*so*
-%{_libdir}/pkgconfig/Magick++.pc
-%{_libdir}/pkgconfig/ImageMagick++.pc
+%{_libdir}/pkgconfig/Magick++*.pc
+%{_libdir}/pkgconfig/ImageMagick++*.pc
 %{_mandir}/man1/Magick++-config.*
 
 %files perl -f perl-pkg-files
