--- a/configure.ac
+++ b/configure.ac
@@ -541,6 +541,7 @@ if test "$with_modules" != 'no' ; then
 fi
 if test "$build_modules" != 'no' ; then
     AC_DEFINE(BUILD_MODULES,1,Define if coders and filters are to be built as modules.)
+    MAGICK_FEATURES="$MAGICK_FEATURES Modules"
 fi
 AM_CONDITIONAL(WITH_MODULES, test "$build_modules" != 'no')
 
@@ -3819,10 +3820,6 @@ fi
 if test "$have_zlib"   = 'yes' ; then
    DELEGATES="$DELEGATES zlib"
    MAGICK_FEATURES="$MAGICK_FEATURES ZLIB"
-fi
-if test "$build_modules" != 'no' || \
-   test "${native_win32_build}" = 'yes' ; then
-   MAGICK_FEATURES="$MAGICK_FEATURES MODULES"
 fi
 # Remove extraneous spaces from output variables (asthetic)
 DELEGATES=`echo $DELEGATES | sed -e 's/  */ /g'`
